--- a/index.html
+++ b/index.html
@@ -23,6 +23,12 @@
         backdrop-filter: blur(10px);
         border: 1px solid rgba(255, 255, 255, 0.05);
       }
+      .orange-glow {
+        box-shadow: 0 0 20px rgba(255, 77, 0, 0.3);
+      }
+      .text-glow {
+        text-shadow: 0 0 10px rgba(255, 77, 0, 0.5);
+      }
       ::-webkit-scrollbar {
         width: 8px;
       }
@@ -40,6 +46,13 @@
       .animate-rotate-slow {
         animation: rotate-text 10s linear infinite;
       }
+      @keyframes pulse-soft {
+        0%, 100% { transform: scale(1); opacity: 1; }
+        50% { transform: scale(1.05); opacity: 0.8; }
+      }
+      .animate-pulse-soft {
+        animation: pulse-soft 3s ease-in-out infinite;
+      }
     </style>
     <script type="importmap">
 {
@@ -48,9 +61,9 @@
     "react-dom": "https://esm.sh/react-dom@19.0.0",
     "react-dom/client": "https://esm.sh/react-dom@19.0.0/client",
     "lucide-react": "https://esm.sh/lucide-react@0.460.0?external=react,react-dom",
-    "@google/genai": "https://esm.sh/@google/genai@latest",
     "react-dom/": "https://esm.sh/react-dom@19.0.0/",
-    "react/": "https://esm.sh/react@19.0.0/"
+    "react/": "https://esm.sh/react@19.0.0/",
+    "@google/genai": "https://esm.sh/@google/genai@^1.35.0"
   }
 }
 </script>
